hphp/test/slow/using/bad-lambda6.php.expectf
Fatal error: Call to undefined method Closure$main;%d::__dispose() in %s/test/slow/using/bad-lambda6.php on line 5
